--- a/src/services/Header/Header.css
+++ b/src/services/Header/Header.css
@@ -7,11 +7,10 @@
   --color-6: #39375B;
   }
 
-.App {
-  text-align: center;
+.Header {
+  background-color: #177E89;
+  color: rgb(255, 255, 255);
+  border: --color-2 solid 2px;
+  font-size: 200%;
   font-family: monospace;
-}
-
-body {
-  background-color: var(--color-1);
 }
